tests/snapshots/examples_fixtures/type_system__failing__173_perform_missing_dot.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/173_perform_missing_dot.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Effect Operation Separator

This `perform` expression needs `.` between the effect and operation.

  examples/type_system/failing/173_perform_missing_dot.flx:20:20
   |
20 | let x = perform IO print("hi")
   |                    ^^^^^

Hint:
  Perform expressions use `perform Effect.op(args...)`.
== stdout ==
<not executed>
